--- a/app/templates/includes/nav.html
+++ b/app/templates/includes/nav.html
@@ -2,7 +2,7 @@
     {% block nav %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Movie recommender app</a>
+                <a class="navbar-brand" href="/">Movie recommender app</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
